k8s/backend-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-nodeport
spec:
  selector:
    app: portfolio-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer     # AWS crée un ELB automatiquement
