k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer     # AWS crée un ELB automatiquement
