k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: portfolio.local
      http:
        paths:
          # Route API → backend
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio-backend-service
                port:
                  number: 5000
          # Route racine → frontend
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio-frontend-service
                port:
                  number: 80
